Adding create task endpoint, as well as drastically increasing documentation for all data.